fix: invalid event name in ci yml

--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -1,11 +1,7 @@
 name: Test CI
 on:
-  pull:
-    branches:
-      - master
-  push:
-    branches:
-      - master
+  pull_request:
+    branches: [ develop, master, staging ]
 jobs:
   build:
     name: Test
