--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "geoip-lite": "^1.4.2",
+    "request-ip": "^2.1.3",
     "sqlite3": "^5.0.2",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "ua-parser-js": "^0.7.28",
+    "utils-deep-clone": "^0.0.3",
+    "winston": "^3.3.3"
   },
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
