--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.1",
     "@types/supertest": "^2.0.11",
+    "artillery": "^1.7.7",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "ts-jest": "^27.0.5",
@@ -33,6 +34,7 @@
     "start:dev": "NODE_ENV=development nodemon",
     "start": "NODE_ENV=production node build/index.js",
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
-    "coverage": "NODE_ENV=test jest --coverage"
+    "coverage": "NODE_ENV=test jest --coverage",
+    "load:test": "artillery run artillery.yml"
   }
 }
