--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "geoip-lite": "^1.4.2",
+    "helmet": "^4.6.0",
     "request-ip": "^2.1.3",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.6",
