--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^16.7.1",
     "@types/supertest": "^2.0.11",
     "artillery": "^1.7.7",
+    "husky": "^7.0.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "ts-jest": "^27.0.5",
@@ -37,5 +38,10 @@
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
     "coverage": "NODE_ENV=test jest --coverage",
     "load:test": "artillery run artillery.yml"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn jest"
+    }
   }
 }
