--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "yarn jest"
+      "pre-push": "yarn test",
+      "pre-commit": "yarn test"
     }
   }
 }
