--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "yarn test",
-      "pre-commit": "yarn test"
+      "pre-push": "npm run test"
     }
   }
 }
