chore: run tests before push

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "load:test": "artillery run artillery.yml"
   },
   "hooks": {
-    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+    "pre-push": "yarn test"
   }
 }
