--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "request-ip": "^2.1.3",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.6",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "ua-parser-js": "^0.7.28",
     "utils-deep-clone": "^0.0.3",
     "winston": "^3.3.3"
