--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
+    "pm2": "^5.1.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tslint": "^6.1.3",
@@ -39,10 +40,11 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start:dev": "NODE_ENV=development nodemon",
-    "start": "NODE_ENV=production node build/index.js",
+    "start": "NODE_ENV=production pm2 start build/index.js",
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
     "coverage": "NODE_ENV=test jest --coverage",
-    "load:test": "artillery run artillery.yml"
+    "load:test": "artillery run artillery.yml",
+    "pm2":"pm2 status"
   },
   "hooks": {
     "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
